--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.178",
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "express": "^4.17.2",
-    "mongoose": "^6.1.7"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.1.7",
+    "zod": "^3.11.6"
   }
 }
