--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/config": "^0.0.41",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.178",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/lodash": "^4.14.178",
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
