--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.7",
+    "winston": "^3.6.0",
     "zod": "^3.11.6"
   }
 }
